CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -DASIO_STANDALONE")

IF(WIN32)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D_WIN32_WINDOWS")
ENDIF()

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR})

find_package (Threads)

ADD_EXECUTABLE(final src/final.cpp)
ADD_EXECUTABLE(server src/server.cpp)

target_link_libraries (server ${CMAKE_THREAD_LIBS_INIT})

INCLUDE_DIRECTORIES(include)